# i6_engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  exe.ps1  run.sh
src/: main.cpp  pch.h
src/engine/: engine.cpp  engine.h
src/engine/1/: 1.cpp  2.cpp  4.cpp
src/engine/components/: core.cpp  debug.cpp  game.cpp  maintence.cpp  player.cpp  texture.cpp  texture.h
src/engine/components/game/: GameObject.cpp  GameObject.h  gamelogic.cpp  gamelogic.h
src/engine/components/game/gameobjects/: background.cpp  background.h  player.cpp  player.h  wall.cpp  wall.h
src/etc/proc/: proc.cpp  proc.h
src/etc/render/: render.cpp  render.h
src/etc/timer/: timer.cpp  timer.h
src/inc/gimp/: background.xcf  player.xcf  wall.xcf
src/inc/stick_figure/: stick_figure.xcf
